--- a/index.html
+++ b/index.html
@@ -458,83 +458,161 @@
 						</div>
 					</li>
 					<li data-transition="random" data-slotamount="7" data-masterspeed="300" data-thumb="img/slider/slider-1/3.jpg" data-saveperformance="off" data-title="Slide1">
+					<!-- MAIN IMAGE -->
+					<img src="img/slider/slider-1/3.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+					<!-- LAYERS -->
+
+					<!-- LAYER NR. 1 -->
+					<div class="tp-caption sft rs-parallaxlevel-0 position-top"
+					     data-x="center"
+					     data-y="400"
+					     data-speed="800"
+					     data-start="1000"
+					     data-easing="easeInOutExpo"
+					     data-elementdelay="0.1"
+					     data-endelementdelay="0.1"
+					     data-endspeed="300" style="z-index: 5;">
+						<img src="img/slider/slider-1/slide-logo.png" alt="">
+					</div>
+
+					<!-- LAYER NR. 2 -->
+					<div class="tp-caption chairman_slider1_slide_t1 sfl tp-resizeme rs-parallaxlevel-0 font-size"
+					     data-x="center"
+					     data-y="460"
+					     data-speed="800"
+					     data-start="1500"
+					     data-easing="easeInOutExpo"
+					     data-splitin="none"
+					     data-splitout="none"
+					     data-elementdelay="0.1"
+					     data-endelementdelay="0.1"
+					     data-endspeed="300"
+					     style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap; font-weight: 800; color: #fff; font-size: 25px;letter-spacing: 2px; text-transform: uppercase;">welcome to intensy
+					</div>
+
+					<!-- LAYER NR. 3 -->
+					<div class="tp-caption skewfromleft tp-resizeme rs-parallaxlevel-0"
+					     data-x="center"
+					     data-y="500"
+					     data-speed="800"
+					     data-start="2500"
+					     data-easing="easeInOutExpo"
+					     data-splitin="none"
+					     data-splitout="none"
+					     data-elementdelay="0.1"
+					     data-endelementdelay="0.1"
+					     data-endspeed="300"
+					     style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 900; letter-spacing: 2px; padding: 0; font-size: 60px; text-transform: uppercase; color: #fff;">INTENSY business template
+					</div>
+					<!-- LAYER NR. 4 -->
+					<div class="tp-caption chairman_slider1_slide1_p sfl tp-resizeme rs-parallaxlevel-0 font-size-14 hidden-xs"
+					     data-x="center"
+					     data-y="590"
+					     data-speed="800"
+					     data-start="3000"
+					     data-easing="easeInOutExpo"
+					     data-splitin="none"
+					     data-splitout="none"
+					     data-elementdelay="0.1"
+					     data-endelementdelay="0.1"
+					     data-endspeed="300"
+					     style="z-index: 10; max-width: auto; max-height: auto; white-space: nowrap; font-size: 24; font-weight: bold;">
+						<p style="text-align:center;">Better choice and perfect for your business</p>
+					</div>
+					<!-- LAYER NR. 5 -->
+					<div class="tp-caption sfb randomrotateout tp-resizeme rs-parallaxlevel-0 pad-slider"
+					     data-x="center"
+					     data-y="650"
+					     data-hoffset="0"
+					     data-voffset="0"
+					     data-speed="800"
+					     data-start="4000"
+					     data-easing="easeInOutExpo"
+					     data-splitin="none"
+					     data-splitout="none"
+					     data-elementdelay="0.1"
+					     data-endelementdelay="0.1"
+					     style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#' class='readon border large white'>learn more</a>
+					</div>
+				</li>
+					<li data-transition="random" data-slotamount="7" data-masterspeed="300" data-thumb="img/slider/slider-1/1.jpg" data-saveperformance="off" data-title="Slide1">
 						<!-- MAIN IMAGE -->
-						<img src="img/slider/slider-1/3.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+						<img src="img/slider/slider-1/1.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 						<!-- LAYERS -->
 
 						<!-- LAYER NR. 1 -->
-						<div class="tp-caption sft rs-parallaxlevel-0 position-top" 
-							data-x="center" 
-							data-y="400" 
-							data-speed="800" 
-							data-start="1000" 
-							data-easing="easeInOutExpo" 
-							data-elementdelay="0.1" 
-							data-endelementdelay="0.1" 
-							data-endspeed="300" style="z-index: 5;">
+						<div class="tp-caption sft rs-parallaxlevel-0 position-top"
+						     data-x="center"
+						     data-y="400"
+						     data-speed="800"
+						     data-start="1000"
+						     data-easing="easeInOutExpo"
+						     data-elementdelay="0.1"
+						     data-endelementdelay="0.1"
+						     data-endspeed="300" style="z-index: 5;">
 							<img src="img/slider/slider-1/slide-logo.png" alt="">
 						</div>
 
 						<!-- LAYER NR. 2 -->
-						<div class="tp-caption chairman_slider1_slide_t1 sfl tp-resizeme rs-parallaxlevel-0 font-size" 
-							data-x="center"
-							data-y="460"
-							data-speed="800"
-							data-start="1500"
-							data-easing="easeInOutExpo"
-							data-splitin="none"
-							data-splitout="none"
-							data-elementdelay="0.1"
-							data-endelementdelay="0.1"
-							data-endspeed="300"
-							style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap; font-weight: 800; color: #fff; font-size: 25px;letter-spacing: 2px; text-transform: uppercase;">welcome to intensy
+						<div class="tp-caption chairman_slider1_slide_t1 sfl tp-resizeme rs-parallaxlevel-0 font-size"
+						     data-x="center"
+						     data-y="460"
+						     data-speed="800"
+						     data-start="1500"
+						     data-easing="easeInOutExpo"
+						     data-splitin="none"
+						     data-splitout="none"
+						     data-elementdelay="0.1"
+						     data-endelementdelay="0.1"
+						     data-endspeed="300"
+						     style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap; font-weight: 800; color: #fff; font-size: 25px;letter-spacing: 2px; text-transform: uppercase;">welcome to intensy
 						</div>
 
 						<!-- LAYER NR. 3 -->
 						<div class="tp-caption skewfromleft tp-resizeme rs-parallaxlevel-0"
-							data-x="center"
-							data-y="500"
-							data-speed="800"
-							data-start="2500"
-							data-easing="easeInOutExpo"
-							data-splitin="none"
-							data-splitout="none" 
-							data-elementdelay="0.1"
-							data-endelementdelay="0.1"
-							data-endspeed="300"
-							style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 900; letter-spacing: 2px; padding: 0; font-size: 60px; text-transform: uppercase; color: #fff;">INTENSY business template 
+						     data-x="center"
+						     data-y="500"
+						     data-speed="800"
+						     data-start="2500"
+						     data-easing="easeInOutExpo"
+						     data-splitin="none"
+						     data-splitout="none"
+						     data-elementdelay="0.1"
+						     data-endelementdelay="0.1"
+						     data-endspeed="300"
+						     style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 900; letter-spacing: 2px; padding: 0; font-size: 60px; text-transform: uppercase; color: #fff;">INTENSY business template
 						</div>
 						<!-- LAYER NR. 4 -->
 						<div class="tp-caption chairman_slider1_slide1_p sfl tp-resizeme rs-parallaxlevel-0 font-size-14 hidden-xs"
-							data-x="center"
-							data-y="590" 
-							data-speed="800" 
-							data-start="3000" 
-							data-easing="easeInOutExpo"
-							data-splitin="none" 
-							data-splitout="none"
-							data-elementdelay="0.1"
-							data-endelementdelay="0.1"
-							data-endspeed="300"
-							style="z-index: 10; max-width: auto; max-height: auto; white-space: nowrap; font-size: 24; font-weight: bold;">
+						     data-x="center"
+						     data-y="590"
+						     data-speed="800"
+						     data-start="3000"
+						     data-easing="easeInOutExpo"
+						     data-splitin="none"
+						     data-splitout="none"
+						     data-elementdelay="0.1"
+						     data-endelementdelay="0.1"
+						     data-endspeed="300"
+						     style="z-index: 10; max-width: auto; max-height: auto; white-space: nowrap; font-size: 24; font-weight: bold;">
 							<p style="text-align:center;">Better choice and perfect for your business</p>
 						</div>
 						<!-- LAYER NR. 5 -->
-						<div class="tp-caption sfb randomrotateout tp-resizeme rs-parallaxlevel-0 pad-slider" 
-							data-x="center"
-							data-y="650"
-							data-hoffset="0"
-							data-voffset="0" 
-							data-speed="800" 
-							data-start="4000"
-							data-easing="easeInOutExpo"
-							data-splitin="none"
-							data-splitout="none"
-							data-elementdelay="0.1"
-							data-endelementdelay="0.1"
-							style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#' class='readon border large white'>learn more</a>
+						<div class="tp-caption sfb randomrotateout tp-resizeme rs-parallaxlevel-0 pad-slider"
+						     data-x="center"
+						     data-y="650"
+						     data-hoffset="0"
+						     data-voffset="0"
+						     data-speed="800"
+						     data-start="4000"
+						     data-easing="easeInOutExpo"
+						     data-splitin="none"
+						     data-splitout="none"
+						     data-elementdelay="0.1"
+						     data-endelementdelay="0.1"
+						     style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#' class='readon border large white'>learn more</a>
 						</div>
-					</li>					
+					</li>
 				</ul>
 			</div>
 		</div>
