--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		
 		<!-- style CSS
 		============================================ -->			
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
 		
 		<!-- responsive CSS
 		============================================ -->			
