--- a/index.html
+++ b/index.html
@@ -552,8 +552,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/1.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Vivamus elementum semper</h3>
-            <p>Design</p>
+            <h3>Sedona</h3>
+            <p>Сайт о небольшом, но самом настоящем городке в Аризоне</p>
           </div>
         </a>
       </div>
@@ -563,8 +563,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/2.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Vokalia and Consonantia</h3>
-            <p>Design</p>
+            <h3>Code and Magick</h3>
+            <p>Сайт-игра про одного гордого мага, который решил в одиночестве пойти и просто спасти весь мир</p>
           </div>
         </a>
       </div>
@@ -574,8 +574,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/3.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Towards the viewer</h3>
-            <p>Design</p>
+            <h3>Барбершоп "Borodinski"</h3>
+            <p>Сайт модного в наше время заведения для приведения бород и усов в полный порядок. Барбершоп, и этим всё сказано</p>
           </div>
         </a>
       </div>
@@ -585,8 +585,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/4.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Neleniti atque corrupti</h3>
-            <p>Design</p>
+            <h3>Mishka</h3>
+            <p>Небольшой сайт по продаже поделок ручной работы для украшения вашего интерьера</p>
           </div>
         </a>
       </div>
@@ -596,8 +596,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/5.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Pellentesque habitant tristique</h3>
-            <p>Design</p>
+            <h3>Kekstagram</h3>
+            <p>Амбициозный проект, призванный не только выйти на уровень Instagram, но и переплюнуть его в самое ближаайшее время. На самом деле нет</p>
           </div>
         </a>
       </div>
@@ -607,8 +607,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/6.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Present moment</h3>
-            <p>Design</p>
+            <h3>Nerds</h3>
+            <p>Сайт начинающей веб-студии, которая, однако же, плотно взялась за дело</p>
           </div>
         </a>
       </div>
@@ -618,8 +618,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/7.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Suspendisse pulvina</h3>
-            <p>Design</p>
+            <h3>Pink</h3>
+            <p>Рекламный сайт для одного крайне положительного приложения, способного преобразить окружающий мир и придать ему ярких красок</p>
           </div>
         </a>
       </div>
@@ -629,8 +629,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/8.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Meridian sun strikes</h3>
-            <p>Design</p>
+            <h3>Gllacy</h3>
+            <p>Целый портал, посвящённый вкуснейшему мороженому самых различных видов и сортов</p>
           </div>
         </a>
       </div>
@@ -640,8 +640,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/9.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Vestibulum volutpat</h3>
-            <p>Design</p>
+            <h3>Техномарт</h3>
+            <p>Без прикрас - интернет-магазин серьёзных мужских игрушек. Перфораторы, болгарки, дрели и другой инструмент</p>
           </div>
         </a>
       </div>
@@ -651,8 +651,8 @@
         <a href="#">
           <div class="awesome-img"><img src="img/portfolio/awesome/10.jpg" alt=""/></div>
           <div class="awesome-info">
-            <h3>Sed hendrerit</h3>
-            <p>Design</p>
+            <h3>Device</h3>
+            <p>Универсальный интернет-магазин по продаже всех видов современной электроники</p>
           </div>
         </a>
       </div>
@@ -672,7 +672,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="section-heading">
-          <h3>OUR AMAZING <strong>SKILL</strong></h3>
+          <h3>НАШИ <strong>УМЕНИЯ</strong></h3>
         </div>
       </div>
     </div>
