--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
           <div class="progress-circular">
             <input type="text" class="knob" value="0" data-rel="85" data-linecap="round" data-width="175"
                    data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Web Design</h4>
+            <h4 class="progress-h4">Веб-дизайн</h4>
           </div>
         </div>
       </div>
@@ -695,7 +695,7 @@
           <div class="progress-circular">
             <input type="text" class="knob" value="0" data-rel="75" data-linecap="round" data-width="175"
                    data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Graphics Design</h4>
+            <h4 class="progress-h4">Графический дизайн</h4>
           </div>
         </div>
       </div>
@@ -706,7 +706,7 @@
           <div class="progress-circular">
             <input type="text" class="knob" value="0" data-rel="65" data-linecap="round" data-width="175"
                    data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">PHP Developer</h4>
+            <h4 class="progress-h4">HTML и CSS</h4>
           </div>
         </div>
       </div>
@@ -737,14 +737,11 @@
               <img src="img/testimonial/team1.jpg" alt=""/>
             </div>
             <div class="test-text">
-              <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs,
-                pitifully thin compared with the size of the rest of him, waved about magazine and housed in a nice,
-                gilded frame. It showed</p>
+              <p>Наша компания остро нуждалась в сайте. Требования были довольно строгими, так как корпоративный портал серьёзной компании не может быть написан студентами на коленке - нужен опыт и знания. Компания Ubis успешно справилсь с поставленными задачами, были моменты недопонимания и высоких ожиданий с нашей стороны, но все они благополучно разрешились. Сайт работает и приводит новых клиентов. </p>
             </div>
             <div class="test-info">
-              <span class="test-name">Calista Rose</span>
-              <span class="test-title">General Maneger</span> -
-              <a href="#">BootExperts Ltd</a>
+              <span class="test-name">Александр</span>
+              <span class="test-title">Руководитель - СпецТранСервис</span>
             </div>
           </div>
           <div class="single-testimonial">
@@ -752,14 +749,11 @@
               <img src="img/testimonial/team2.jpg" alt=""/>
             </div>
             <div class="test-text">
-              <p>It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between
-                its four familiar walls. A collection of textile samples lay spread out on the table raising a heavy
-                fur.</p>
+              <p>Компания Ubis - молодые амбициозные парни с изрядной долей наглости. Безапелляционно заявили мне, что нашей компании просто необходимо обновление сайта и полный спектр услуг по сопровождению и ведению рекламной компании. Не знаю почему, но я согласился и не прогадал. Современный сайт очень приятного вида, а уж поток клиентов с него - просто рекой. Приятно с вами работать, спасибо. </p>
             </div>
             <div class="test-info">
-              <span class="test-name">Jhone Doe</span>
-              <span class="test-title">Developer</span> -
-              <a href="#">BootExperts Ltd</a>
+              <span class="test-name">Василий</span>
+              <span class="test-title">Генеральный директор - Oversize Load</span>
             </div>
           </div>
           <div class="single-testimonial">
@@ -767,14 +761,11 @@
               <img src="img/testimonial/team3.jpg" alt=""/>
             </div>
             <div class="test-text">
-              <p>"We would like to thank bdthemes ltd for an outstanding effort on this recently completed project
-                located in the Moscow. The project involved a very aggressive schedule and it was completed on time. We
-                would certainly like to use their professional services again."</p>
+              <p>Сразу хочу заметить, что я очень скептически настроен насчёт интернета и всякого рода рекламы в нём. Старая закалка и чуть ли не печать объявлений в газетах в привычках - меняться с возрастом всё сложнее. Но люди вокруг моего консерватизма не разделяли и потом заявок иссякал, а бизнес развивать нужно. По рекомендации обратился в Ubis, Дмитрий мне всё максимально доходчиво рассказал и практически на пальцах объяснил - что, как и почему именно атк это работает. На этом этапе моё к ним доверие стремительно росло и я решил не медлить и воспользоваться услугами. Полностью доверился вкусу и профессионализму дизайнера - в некоторых моментах категорически не сошлись - не понравилось, но доработки были сделаны очень оперативно. Строго рекомендую!</p>
             </div>
             <div class="test-info">
-              <span class="test-name">Younis Khan</span>
-              <span class="test-title">Web Designer</span> -
-              <a href="#">BootExperts Ltd</a>
+              <span class="test-name">Алексей Вячеславович Руднев</span>
+              <span class="test-title">Генеральный директор - Ренталкран</span>
             </div>
           </div>
         </div>
@@ -807,9 +798,8 @@
   </div>
   <div class="latest-blog-desc">
     <div class="blog-text">
-      <h3 class="latest-blog-title">Our Blog Post</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ornare <br/> tortor lorem, sit amet efficitur
-        sapien imperdiet non. <br/> Donec posuere maximus facilisis. </p>
+      <h3 class="latest-blog-title">Наши направления</h3>
+      <p>Создание сайта - дело сложное и кропотливое, но едва ли </p>
       <a class="readon border white uk-margin-top" href="#">View All Works</a>
     </div>
   </div>
