--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                 </div>
                 <div class="plan-period">рублей</div>
               </div>
-              <p>Vitae adipiscing turpis. Aenean ligula nibh, molestie id vivide.</p>
+              <p>Тариф начального уровня - необходимый минимум</p>
               <div class="plan-options">
                 <ul>
                   <li><span class="plan-border"><strong>10GB</strong> Space amount</span></li>
