--- a/portfolio-column-5.html
+++ b/portfolio-column-5.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Portfolio column 5 - Intensy</title>
+  <title>UBIS | Портфолио</title>
   <meta name="description" content="">
 
   <!-- Mobile specific metas
