--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Plan and Pricing - Intensy</title>
+  <title>UBIS | Тарифы</title>
   <meta name="description" content="">
 
   <!-- Mobile specific metas
