--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 
   <!-- style CSS
   ============================================ -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- responsive CSS
   ============================================ -->
@@ -99,7 +99,7 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="portfolio-column-5.html">Портфолио</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
                 <li><a href="pricing.html">Тарифы</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
@@ -124,7 +124,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="portfolio-column-5.html">Портфолио</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
                 <li><a href="pricing.html">Тарифы</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
@@ -304,9 +304,8 @@
             <ul>
               <li>
                 <span>Адрес:</span>
-									<span>г. Москва<br>
-									ул. Красная Площадь, д. 1<br>
-									Лично</span>
+									<span>г. Химки<br>
+									Московская улица, 14А, БЦ Citrus</span>
               </li>
               <li>
                 <span>Телефоны:</span>
@@ -325,8 +324,7 @@
             <ul>
               <li class="cc-space">
                 <span>Email:</span>
-									<span><a href="#">support@sitename.com</a> <br/>
-									<a href="#">info@sitename.com</a></span>
+                <span><a href="#">info@ubis.pro</a></span>
                 <div class="su-spacer"></div>
               </li>
               <li>
@@ -362,7 +360,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="portfolio-column-5.html">Портфолио</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
                 <li><a href="pricing.html">Тарифы</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
