--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Веб-студия Ubis - создание и продвижение сайтов</title>
+  <title>Ubis | Маркетинговое агентство полного цикла</title>
   <meta name="description" content="">
 
   <!-- Mobile specific metas
@@ -151,14 +151,14 @@
           <!-- LAYER NR. 1 -->
           <div class="tp-caption sft rs-parallaxlevel-0 position-top"
                data-x="center"
-               data-y="400"
+               data-y="355"
                data-speed="800"
-               data-start="1000"
+               data-start="700"
                data-easing="easeInOutExpo"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
                data-endspeed="300" style="z-index: 5;">
-            <img src="img/slider/slider-1/slide-logo.png" alt="" width="100">
+            <img src="img/logo/logo.svg" alt="" width="200">
           </div>
 
           <!-- LAYER NR. 2 -->
@@ -174,7 +174,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap; font-weight: 800; color: #fff; font-size: 25px;letter-spacing: 2px; text-transform: uppercase;">
-            Веб-студия Ubis
+            Маркетинговое агентство полного цикла
           </div>
 
           <!-- LAYER NR. 3 -->
@@ -235,14 +235,14 @@
           <!-- LAYER NR. 1 -->
           <div class="tp-caption sft rs-parallaxlevel-0 position-top"
                data-x="center"
-               data-y="400"
+               data-y="355"
                data-speed="800"
-               data-start="1000"
+               data-start="700"
                data-easing="easeInOutExpo"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
                data-endspeed="300" style="z-index: 5;">
-            <img src="img/slider/slider-1/slide-logo.png" alt="" width="100">
+            <img src="img/logo/logo.svg" alt="" width="200">
           </div>
 
           <!-- LAYER NR. 2 -->
@@ -258,7 +258,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap; font-weight: 800; color: #fff; font-size: 25px;letter-spacing: 2px; text-transform: uppercase;">
-            Веб-студия Ubis
+            Маркетинговое агентство полного цикла
           </div>
 
           <!-- LAYER NR. 3 -->
@@ -446,15 +446,25 @@
       <ul>
         <li class="filter" data-filter="all">Все работы</li>
         <li class="filter" data-filter=".design">Дизайн</li>
-        <li class="filter" data-filter=".flat">"Плоский" дизайн</li>
+        <li class="filter" data-filter=".flat">Flat-дизайн</li>
         <li class="filter" data-filter=".illustration">Иллюстрации</li>
-        <li class="filter" data-filter=".branding">Брендирование</li>
       </ul>
     </div>
     <div class="awesome-portfolio-content">
       <!-- single-awesome-portfolio start -->
-      <div class="single-awesome-portfolio mix all flat illustration">
-        <a class="fancybox" href="img/portfolio/images/sedona-big.png" data-fancybox-group="group">
+      <div class="single-awesome-portfolio mix all design">
+        <a class="fancybox" href="img/portfolio/images/sts-big.jpg" data-fancybox-group="group">
+          <div class="awesome-img"><img src="img/portfolio/awesome/11.jpg" alt=""/></div>
+          <div class="awesome-info">
+            <h3>STS</h3>
+            <p>Сайт крупной транспортной компании по перевозкам негабаритных грузов</p>
+          </div>
+        </a>
+      </div>
+      <!-- single-awesome-portfolio end -->
+      <!-- single-awesome-portfolio start -->
+      <div class="single-awesome-portfolio mix all design illustration">
+        <a class="fancybox" href="img/portfolio/images/sedona-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/1.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Sedona</h3>
@@ -463,20 +473,10 @@
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
-      <!-- single-awesome-portfolio start -->
-      <div class="single-awesome-portfolio mix all design branding">
-        <a class="fancybox" href="img/portfolio/images/codemagick-big.png" data-fancybox-group="group">
-          <div class="awesome-img"><img src="img/portfolio/awesome/2.jpg" alt=""/></div>
-          <div class="awesome-info">
-            <h3>Code and Magick</h3>
-            <p>Сайт-игра про одного гордого мага, который решил в одиночестве пойти и просто спасти весь мир</p>
-          </div>
-        </a>
-      </div>
-      <!-- single-awesome-portfolio end -->
+
       <!-- single-awesome-portfolio start -->
       <div class="single-awesome-portfolio mix all flat illustration">
-        <a class="fancybox" href="img/portfolio/images/barbershop-big.png" data-fancybox-group="group">
+        <a class="fancybox" href="img/portfolio/images/barbershop-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/3.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Барбершоп "Borodinski"</h3>
@@ -486,8 +486,8 @@
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
-      <div class="single-awesome-portfolio mix all design branding">
-        <a class="fancybox" href="img/portfolio/images/mishka-big.png" data-fancybox-group="group">
+      <div class="single-awesome-portfolio mix all flat">
+        <a class="fancybox" href="img/portfolio/images/mishka-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/4.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Mishka</h3>
@@ -497,8 +497,8 @@
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
-      <div class="single-awesome-portfolio mix all flat design illustration">
-        <a class="fancybox" href="img/portfolio/images/kekstagram-big.png" data-fancybox-group="group">
+      <div class="single-awesome-portfolio mix all design illustration">
+        <a class="fancybox" href="img/portfolio/images/kekstagram-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/5.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Kekstagram</h3>
@@ -508,8 +508,8 @@
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
-      <div class="single-awesome-portfolio mix all design branding ">
-        <a class="fancybox" href="img/portfolio/images/nerds-big.png" data-fancybox-group="group">
+      <div class="single-awesome-portfolio mix all flat">
+        <a class="fancybox" href="img/portfolio/images/nerds-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/6.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Nerds</h3>
@@ -520,7 +520,7 @@
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
       <div class="single-awesome-portfolio mix all design illustration">
-        <a class="fancybox" href="img/portfolio/images/pink-big.png" data-fancybox-group="group">
+        <a class="fancybox" href="img/portfolio/images/pink-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/7.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Pink</h3>
@@ -530,8 +530,8 @@
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
-      <div class="single-awesome-portfolio mix all flat illustration branding">
-        <a class="fancybox" href="img/portfolio/images/glacy-big.png" data-fancybox-group="group">
+      <div class="single-awesome-portfolio mix all flat illustration">
+        <a class="fancybox" href="img/portfolio/images/glacy-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/8.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Gllacy</h3>
@@ -541,8 +541,8 @@
       </div>
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
-      <div class="single-awesome-portfolio mix all design branding">
-        <a class="fancybox" href="img/portfolio/images/techmart-big.png" data-fancybox-group="group">
+      <div class="single-awesome-portfolio mix all flat design">
+        <a class="fancybox" href="img/portfolio/images/techmart-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/9.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Техномарт</h3>
@@ -553,7 +553,7 @@
       <!-- single-awesome-portfolio end -->
       <!-- single-awesome-portfolio start -->
       <div class="single-awesome-portfolio mix all flat illustration">
-        <a class="fancybox" href="img/portfolio/images/device-big.png" data-fancybox-group="group">
+        <a class="fancybox" href="img/portfolio/images/device-big.jpg" data-fancybox-group="group">
           <div class="awesome-img"><img src="img/portfolio/awesome/10.jpg" alt=""/></div>
           <div class="awesome-info">
             <h3>Device</h3>
@@ -562,6 +562,7 @@
         </a>
       </div>
       <!-- single-awesome-portfolio end -->
+
     </div>
   </div>
   <!-- awesome-portfolio end -->
