--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Веб-студия Ubis - создание и продвижение сайтов</title>
-  <meta name="description" content="">
+  <title>GTrans - перевозка любых автомобилей по России и СНГ</title>
+  <meta name="description" content="Компания Gtrans перевозит автомобили любого типа по России и странам СНГ - легковые, коммерческие, грузовые, автобусы">
 
   <!-- Mobile specific metas
   ============================================ -->
@@ -86,7 +86,7 @@
         <!-- logo start -->
         <div class="col-md-2 col-lg-3">
           <div class="logo">
-            <a href="index.html"><img src="img/logo/logo.svg" alt="" width="100"/></a>
+            <a href="index.html"><img class="logo-img" src="img/logo/logo-simple.svg" alt="" width="150"/></a>
           </div>
         </div>
         <!-- logo end -->
@@ -97,8 +97,9 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="portfolio-column-5.html">Портфолио</a></li>
-                <li><a href="pricing.html">Тарифы</a></li>
+                <li><a href="portfolio-column-5.html">Преимущества</a></li>
+                <li><a href="portfolio-column-5.html">Направления</a></li>
+                <li><a href="pricing.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -116,7 +117,7 @@
         <div class="col-md-12">
           <div class="mobile-menu">
             <div class="logo">
-              <a href="index.html"><img src="img/logo/logo.svg" alt="" width="70"/></a>
+              <a href="index.html"><img src="img/logo/logo-small-black.svg" alt="" width="80"/></a>
             </div>
             <nav id="dropdown">
               <ul>
@@ -151,14 +152,14 @@
           <!-- LAYER NR. 1 -->
           <div class="tp-caption sft rs-parallaxlevel-0 position-top"
                data-x="center"
-               data-y="400"
+               data-y="410"
                data-speed="800"
                data-start="1000"
                data-easing="easeInOutExpo"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
                data-endspeed="300" style="z-index: 5;">
-            <img src="img/slider/slider-1/slide-logo.png" alt="" width="100">
+            <img src="img/slider/slider-1/slide-logo.svg" alt="" width="150">
           </div>
 
           <!-- LAYER NR. 2 -->
@@ -174,7 +175,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap; font-weight: 800; color: #fff; font-size: 25px;letter-spacing: 2px; text-transform: uppercase;">
-            Веб-студия Ubis
+            Транспортная компания GTrans
           </div>
 
           <!-- LAYER NR. 3 -->
@@ -190,7 +191,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 900; letter-spacing: 2px; padding: 0; font-size: 60px; text-transform: uppercase; color: #fff;">
-            Мы сделаем хорошо
+            Перевозим автомобили
           </div>
 
           <!-- LAYER NR. 4 -->
@@ -206,7 +207,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 10; max-width: auto; max-height: auto; white-space: nowrap; font-size: 24; font-weight: bold;">
-            <p style="text-align:center;">Создание и продвижение сайтов</p>
+            <p style="text-align:center;">Любое количество и направление</p>
           </div>
           <!-- LAYER NR. 5 -->
           <div class="tp-caption sfb randomrotateout tp-resizeme rs-parallaxlevel-0 pad-slider"
@@ -225,24 +226,29 @@
                class='readon border large white'>Узнать больше</a>
           </div>
         </li>
+
+        <!-- SLIDE  1 end -->
+
+        <!-- SLIDE  2 -->
+
         <li data-transition="random" data-slotamount="7" data-masterspeed="300" data-thumb="img/slider/slider-1/3.jpg"
             data-saveperformance="off" data-title="Slide1">
           <!-- MAIN IMAGE -->
-          <img src="img/slider/slider-1/3.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover"
+          <img src="img/slider/slider-1/1.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover"
                data-bgrepeat="no-repeat">
           <!-- LAYERS -->
 
           <!-- LAYER NR. 1 -->
           <div class="tp-caption sft rs-parallaxlevel-0 position-top"
                data-x="center"
-               data-y="400"
+               data-y="410"
                data-speed="800"
                data-start="1000"
                data-easing="easeInOutExpo"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
                data-endspeed="300" style="z-index: 5;">
-            <img src="img/slider/slider-1/slide-logo.png" alt="" width="100">
+            <img src="img/slider/slider-1/slide-logo.svg" alt="" width="150">
           </div>
 
           <!-- LAYER NR. 2 -->
@@ -258,7 +264,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap; font-weight: 800; color: #fff; font-size: 25px;letter-spacing: 2px; text-transform: uppercase;">
-            Веб-студия Ubis
+            Транспортная компания GTrans
           </div>
 
           <!-- LAYER NR. 3 -->
@@ -274,7 +280,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 900; letter-spacing: 2px; padding: 0; font-size: 60px; text-transform: uppercase; color: #fff;">
-            Современный подход
+            Современные автовозы
           </div>
           <!-- LAYER NR. 4 -->
           <div class="tp-caption chairman_slider1_slide1_p sfl tp-resizeme rs-parallaxlevel-0 font-size-14 hidden-xs"
@@ -289,7 +295,7 @@
                data-endelementdelay="0.1"
                data-endspeed="300"
                style="z-index: 10; max-width: auto; max-height: auto; white-space: nowrap; font-size: 24; font-weight: bold;">
-            <p style="text-align:center;">Новейшие технологии для вашего бизнеса</p>
+            <p style="text-align:center;">Высокая скорость доставки</p>
           </div>
           <!-- LAYER NR. 5 -->
           <div class="tp-caption sfb randomrotateout tp-resizeme rs-parallaxlevel-0 pad-slider"
@@ -306,6 +312,94 @@
                data-endelementdelay="0.1"
                style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#'
                class='readon border large white'>Узнать больше</a>
+          </div>
+        </li>
+
+        <!-- SLIDE  2 end -->
+
+        <!-- SLIDE 3 -->
+
+        <li data-transition="random" data-slotamount="7" data-masterspeed="300" data-thumb="img/slider/slider-1/3.jpg"
+            data-saveperformance="off" data-title="Slide1">
+          <!-- MAIN IMAGE -->
+          <img src="img/slider/slider-1/3.jpg" alt="bg" data-bgposition="center top" data-bgfit="cover"
+               data-bgrepeat="no-repeat">
+          <!-- LAYERS -->
+
+          <!-- LAYER NR. 1 -->
+          <div class="tp-caption sft rs-parallaxlevel-0 position-top"
+               data-x="center"
+               data-y="410"
+               data-speed="800"
+               data-start="1000"
+               data-easing="easeInOutExpo"
+               data-elementdelay="0.1"
+               data-endelementdelay="0.1"
+               data-endspeed="300" style="z-index: 5;">
+            <img src="img/slider/slider-1/slide-logo.svg" alt="" width="150">
+          </div>
+
+          <!-- LAYER NR. 2 -->
+          <div class="tp-caption chairman_slider1_slide_t1 sfl tp-resizeme rs-parallaxlevel-0 font-size"
+               data-x="center"
+               data-y="460"
+               data-speed="800"
+               data-start="1500"
+               data-easing="easeInOutExpo"
+               data-splitin="none"
+               data-splitout="none"
+               data-elementdelay="0.1"
+               data-endelementdelay="0.1"
+               data-endspeed="300"
+               style="z-index: 7; max-width: auto; max-height: auto; white-space: nowrap; font-weight: 800; color: #fff; font-size: 25px;letter-spacing: 2px; text-transform: uppercase;">
+            Транспортная компания GTrans
+          </div>
+
+          <!-- LAYER NR. 3 -->
+          <div class="tp-caption skewfromleft tp-resizeme rs-parallaxlevel-0"
+               data-x="center"
+               data-y="500"
+               data-speed="800"
+               data-start="2500"
+               data-easing="easeInOutExpo"
+               data-splitin="none"
+               data-splitout="none"
+               data-elementdelay="0.1"
+               data-endelementdelay="0.1"
+               data-endspeed="300"
+               style="z-index: 9; max-width: auto; max-height: auto; white-space: nowrap;font-weight: 900; letter-spacing: 2px; padding: 0; font-size: 60px; text-transform: uppercase; color: #fff;">
+            Профессиональные менеджеры
+          </div>
+          <!-- LAYER NR. 4 -->
+          <div class="tp-caption chairman_slider1_slide1_p sfl tp-resizeme rs-parallaxlevel-0 font-size-14 hidden-xs"
+               data-x="center"
+               data-y="590"
+               data-speed="800"
+               data-start="3000"
+               data-easing="easeInOutExpo"
+               data-splitin="none"
+               data-splitout="none"
+               data-elementdelay="0.1"
+               data-endelementdelay="0.1"
+               data-endspeed="300"
+               style="z-index: 10; max-width: auto; max-height: auto; white-space: nowrap; font-size: 24; font-weight: bold;">
+            <p style="text-align:center;">Индивидуальный подход</p>
+          </div>
+          <!-- LAYER NR. 5 -->
+          <div class="tp-caption sfb randomrotateout tp-resizeme rs-parallaxlevel-0 pad-slider"
+               data-x="center"
+               data-y="650"
+               data-hoffset="0"
+               data-voffset="0"
+               data-speed="800"
+               data-start="4000"
+               data-easing="easeInOutExpo"
+               data-splitin="none"
+               data-splitout="none"
+               data-elementdelay="0.1"
+               data-endelementdelay="0.1"
+               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#'
+                                                                                               class='readon border large white'>Узнать больше</a>
           </div>
         </li>
       </ul>
@@ -319,8 +413,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="welcome-text">
-          <h2>Добро пожаловать в<strong> UBIS</strong></h2>
-          <p>Адаптивные сайты с логичной структурой и приятным интерфейсом. Современные технологии пришли на помощь вашему бизнесу - за красивой оболочкой таится небывалое быстродействие и отличная оптимизация. Мы используем только то, что действительно нужно - ничего лишнего. </p>
+          <h2>Компания <strong>GTrans</strong> приветствует вас</h2>
+          <p>У вас есть легковой автомобиль, коммерческий транспорт, или даже автобус, который вы хотите безопасно и быстро перевезти в другой город или страну? Нет ничего проще. Всё, что вам нужно - позвонить нам. Наши специалисты профессионально огранизуют перевозку любого типа автомобильного транспорта по России и странам СНГ. Для нас не существует преград или ограничений.</p>
         </div>
       </div>
     </div>
@@ -389,8 +483,8 @@
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <div class="creative-text">
           <div class="creative-heading">
-            <h2>КРЕАТИВНО И <strong>ФУНКЦИОНАЛЬНО</strong></h2>
-            <p>Мы рады предложить вам не только безупречный стиль, но также и невероятное удобство использования. Всё интуитивно понятно, просто и, в то же самое время, максимально охватывает все сферы деятельности вашей компании</p>
+            <h2>Оперативно и <strong>ПРОФЕССИОНАЛЬНО</strong></h2>
+            <p>Наши решения в области перевозки автомобильного транспорта позволяют удовлетворять все потребности потребителей. Налаженная система логистики, современные тягачи и прицепы, спутниковые системы отслеживания груза, а также полный спектр специальных услуг для особо важных клиентов</p>
           </div>
           <div class="creative-info">
             <div class="creative-icon">
@@ -398,7 +492,7 @@
             </div>
             <div class="creative-desc">
               <h3>Умные решения</h3>
-              <p>Наши специалисты по юзабилити тщательно анализируют интерфейс - всё должно быть идеально. Без исключений. </p>
+              <p>Наши специалисты рады предложить вам </p>
             </div>
           </div>
           <div class="creative-info">
