--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="portfolio-column-5.html">Портфолио</a></li>
-                <li><a href="pricing.html">Тарифы</a></li>
+                <li><a href="portfolio-column-5.html">Преимущества</a></li>
+                <li><a href="portfolio-column-5.html">Направления</a></li>
+                <li><a href="pricing.html">Автопарк</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
             </nav>
@@ -432,8 +433,8 @@
             <img src="/img/features/css.svg" width="150">
           </div>
           <div class="features-info-text">
-            <h3>Мощь CSS3</h3>
-            <p>Удивительные возможности последней версии CSS для создания необычных эффектов и анимаций</p>
+            <h3>Собственный автопарк</h3>
+            <p>Современные надёжные автомобили и прицепы для безопасной и быстрой перевозки ваших транспортных средств</p>
           </div>
         </div>
       </div>
@@ -445,8 +446,8 @@
             <img src="/img/features/html.svg" width="150">
           </div>
           <div class="features-info-text">
-            <h3>Семантика HTML5</h3>
-            <p>Использование элементов строго по назначению для лучшего ранжирования поисковыми системами</p>
+            <h3>Соблюдение сроков</h3>
+            <p>Мы знаем, как важно соблюдать взятые на себя обязательства, поэтому строго соблюдаем сроки доставки</p>
           </div>
         </div>
       </div>
@@ -458,8 +459,8 @@
             <img src="/img/features/js.svg" width="150">
           </div>
           <div class="features-info-text">
-            <h3>Скорость JS</h3>
-            <p>Для оптимизации и скорости работы используется минимально необходимый объём кода</p>
+            <h3>Гарантия сохранности</h3>
+            <p>Наша компания берёт на себя все риски - мы доставим ваш автомобиль в полной сохранности</p>
           </div>
         </div>
       </div>
@@ -491,8 +492,8 @@
               <i class="fa fa-chevron-right"></i>
             </div>
             <div class="creative-desc">
-              <h3>Умные решения</h3>
-              <p>Наши специалисты рады предложить вам </p>
+              <h3>Опыт и мастерство</h3>
+              <p>Наша компания более 8 лет занимается перевозкой различных типов автотранспортных средств, за это время мы проработали все возможные ситуации и предлагаем услугу максимального качества</p>
             </div>
           </div>
           <div class="creative-info">
@@ -500,8 +501,8 @@
               <i class="fa fa-chevron-right"></i>
             </div>
             <div class="creative-desc">
-              <h3>Простота обслуживания</h3>
-              <p>Система управления сайтом специально настроена на максимальное удобство использования.</p>
+              <h3>Оформление документов</h3>
+              <p>Мы берём на себя всю бумажную работу - самую нудную, но необходимую часть перевозки. Полное сопровождение на всех этапах, наши специалисты подготовят все документы для осуществления перевозки</p>
             </div>
           </div>
           <div class="creative-info">
@@ -509,8 +510,8 @@
               <i class="fa fa-chevron-right"></i>
             </div>
             <div class="creative-desc">
-              <h3>Отличный результат</h3>
-              <p>Наши сайты в совокупности с грамотной контекстной рекламой приведут вам много новых клиентов. </p>
+              <h3>Регулярные оповещения</h3>
+              <p>Мы сообщим вам о каждом этапе перевозки и будем держать в курсе событий на всём протяжении маршрута следования. Доверьте ваш автомобиль профессионалам</p>
             </div>
           </div>
         </div>
@@ -527,8 +528,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="section-heading">
-          <h2>Посмотрите наше <strong>ПОРТФОЛИО</strong></h2>
-          <p>Несколько наших работ в качестве подтверждения профессионализма и серьёзного настроя. </p>
+          <h2>Наши <strong>ВОЗМОЖНОСТИ</strong></h2>
+          <p>Мы перевозим все основные типы транспортных средств</p>
         </div>
       </div>
     </div>
@@ -538,11 +539,11 @@
   <div class="awesome-portfolio">
     <div class="awesome-portfolio-menu">
       <ul>
-        <li class="filter" data-filter="all">Все работы</li>
-        <li class="filter" data-filter=".design">Дизайн</li>
-        <li class="filter" data-filter=".flat">"Плоский" дизайн</li>
-        <li class="filter" data-filter=".illustration">Иллюстрации</li>
-        <li class="filter" data-filter=".branding">Брендирование</li>
+        <li class="filter" data-filter="all">Весь транспорт</li>
+        <li class="filter" data-filter=".design">Легковые</li>
+        <li class="filter" data-filter=".flat">Коммерческие</li>
+        <li class="filter" data-filter=".illustration">Грузовые</li>
+        <li class="filter" data-filter=".branding">Мототранспорт</li>
       </ul>
     </div>
     <div class="awesome-portfolio-content">
