--- a/index.html
+++ b/index.html
@@ -703,9 +703,6 @@
   <!-- awesome-portfolio end -->
 </div>
 <!-- awesome-portfolio-area end -->
-<!-- creative-member-area start -->
-
-<!-- creative-member-area end -->
 
 <!-- testimonial-area start -->
 <div class="testimonial-area fix">
@@ -789,10 +786,7 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Перевозка мото и водного транспорта</a></h3>
-      <p>Мы профессионально занимаемся перевозкой любых автотранспортных средств - седанов, универсалов, хэтчбеков,
-        купе, кабриолетов, внедорожников, пикапов, паркетников, любого коммерческого транспорта, микроавтобусов,
-        автобусов и грузовых автомобилей. Наше техническое оснащение позволяет максимально безопасно закреплять ваше
-        транспортное средство на прицепе, что гарантирует своевременную доставку и полную сохранность. </p>
+      <p>Возможности нашей компании не ограничиваются транспортировкой автомобилей, мы также поможем вам перевезти любой вид транспорта, будь то мотоцикл, квадроцикл, моторная лодка, катер, огромная яхта или даже вертолёт. В нашем распоряжении все необходимые технические средства для правилього закрепления груза на платформе прицепа, а значит транспортировка пройдёт максимально безопасно. </p>
     </div>
   </div>
   <!-- top blog end -->
@@ -804,10 +798,7 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Отслеживание</a></h3>
-      <p>Мы профессионально занимаемся перевозкой любых автотранспортных средств - седанов, универсалов, хэтчбеков,
-        купе, кабриолетов, внедорожников, пикапов, паркетников, любого коммерческого транспорта, микроавтобусов,
-        автобусов и грузовых автомобилей. Наше техническое оснащение позволяет максимально безопасно закреплять ваше
-        транспортное средство на прицепе, что гарантирует своевременную доставку и полную сохранность. </p>
+      <p>Глобальные системы позиционирования прочно заняли свое место в области автотранспорта - без них не обходится сейчас, пожалуй, ни одна область этого бизнеса. Отслеживание грузов позволяет всегда быть в курсе событий и точно знать дату прибытия груза к месту назначения. Наша компания использует все самые передовые технологии в области позиционирования - на данный момент ключевыми системами являются GPS и ГЛОНАСС. </p>
     </div>
   </div>
   <div class="latest-blog-desc">
@@ -817,10 +808,7 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Страхование</a></h3>
-      <p>Мы профессионально занимаемся перевозкой любых автотранспортных средств - седанов, универсалов, хэтчбеков,
-        купе, кабриолетов, внедорожников, пикапов, паркетников, любого коммерческого транспорта, микроавтобусов,
-        автобусов и грузовых автомобилей. Наше техническое оснащение позволяет максимально безопасно закреплять ваше
-        транспортное средство на прицепе, что гарантирует своевременную доставку и полную сохранность. </p>
+      <p>Для уверенности в полной сохранности отправления вы можете оформить страховой полис, покрывающий все возможные риски, возникающие при транспортировке. Наши специалисты помогут вам правильно подобрать программу страховния, рассчитают тарифы и подготовят необходимый комплект документов. </p>
     </div>
   </div>
   <!-- bottom blog end -->
