--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
-                <li><a>Направления</a>
+                <li><a href="#">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
