--- a/index.html
+++ b/index.html
@@ -100,17 +100,19 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
-                <li><a href="#">Направления</a>
+                <li><a href="portfolio-column-5.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
                     <li><a href="#">Москва - Уфа</a></li>
+                    <li><a href="#">Москва - Казань</a></li>
                     <li><a href="#">Москва - Ростов-на-Дону</a></li>
                     <li><a href="#">Москва - Челябинск</a></li>
                     <li><a href="#">Москва - Калининград</a></li>
                     <li><a href="#">Москва - Краснодар</a></li>
                     <li><a href="#">Москва - Сургут</a></li>
                     <li><a href="#">Москва - Новосибирск</a></li>
+                    <li><a href="#">Москва - Екатеринбург</a></li>
                     <li><a href="#">Москва - Иркутск</a></li>
                     <li><a href="#">Москва - Хабаровск</a></li>
                     <li><a href="#">Москва - Владикавказ</a></li>
@@ -118,17 +120,18 @@
                     <li><a href="#">Санкт-Петербург - Москва</a></li>
                     <li><a href="#">Нижний Новгород - Москва</a></li>
                     <li><a href="#">Уфа - Москва</a></li>
+                    <li><a href="#">Казань - Москва</a></li>
                     <li><a href="#">Ростов-на-Дону - Москва</a></li>
                     <li><a href="#">Челябинск - Москва</a></li>
                     <li><a href="#">Калининград - Москва</a></li>
                     <li><a href="#">Краснодар - Москва</a></li>
                     <li><a href="#">Сургут - Москва</a></li>
                     <li><a href="#">Новосибирск - Москва</a></li>
+                    <li><a href="#">Екатеринбург - Москва</a></li>
                     <li><a href="#">Иркутск - Москва</a></li>
                     <li><a href="#">Хабаровск - Москва</a></li>
                     <li><a href="#">Владикавказ - Москва</a></li>
                     <li><a href="#">Махачкала - Москва</a></li>
-
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
@@ -161,8 +164,33 @@
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
                     <li><a href="#">Москва - Уфа</a></li>
+                    <li><a href="#">Москва - Казань</a></li>
                     <li><a href="#">Москва - Ростов-на-Дону</a></li>
                     <li><a href="#">Москва - Челябинск</a></li>
+                    <li><a href="#">Москва - Калининград</a></li>
+                    <li><a href="#">Москва - Краснодар</a></li>
+                    <li><a href="#">Москва - Сургут</a></li>
+                    <li><a href="#">Москва - Новосибирск</a></li>
+                    <li><a href="#">Москва - Екатеринбург</a></li>
+                    <li><a href="#">Москва - Иркутск</a></li>
+                    <li><a href="#">Москва - Хабаровск</a></li>
+                    <li><a href="#">Москва - Владикавказ</a></li>
+                    <li><a href="#">Москва - Махачкала</a></li>
+                    <li><a href="#">Санкт-Петербург - Москва</a></li>
+                    <li><a href="#">Нижний Новгород - Москва</a></li>
+                    <li><a href="#">Уфа - Москва</a></li>
+                    <li><a href="#">Казань - Москва</a></li>
+                    <li><a href="#">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="#">Челябинск - Москва</a></li>
+                    <li><a href="#">Калининград - Москва</a></li>
+                    <li><a href="#">Краснодар - Москва</a></li>
+                    <li><a href="#">Сургут - Москва</a></li>
+                    <li><a href="#">Новосибирск - Москва</a></li>
+                    <li><a href="#">Екатеринбург - Москва</a></li>
+                    <li><a href="#">Иркутск - Москва</a></li>
+                    <li><a href="#">Хабаровск - Москва</a></li>
+                    <li><a href="#">Владикавказ - Москва</a></li>
+                    <li><a href="#">Махачкала - Москва</a></li>
                   </ul>
                 </li>
                 <li><a href="#">Автопарк</a></li>
